update and fixes to htmls

--- a/senate-data.html
+++ b/senate-data.html
@@ -18,10 +18,10 @@
 </head>
 
 <body class="light-mode">
-  <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
-    <a class="navbar-brand" href="#">
+  <nav id="navbar" class="container navbar navbar-expand-lg navbar-light bg-light border sticky-top">
+    <a class="navbar-brand" href="index.html">
       <img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="" />
-      Transparent Government in Fact
+      TGIF
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item dropdown">
@@ -72,6 +72,11 @@
           </div>
         </li>
       </ul>
+
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" id="searchInput" placeholder="Search for name..."
+          aria-label="Search" onkeyup="filterByName()" />
+      </form>
     </div>
   </nav>
 
