--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     -->
   </header>
 
-  <nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
-    <a class="navbar-brand" href="#">
+  <nav id="navbar" class="container navbar navbar-expand-lg navbar-light bg-light border sticky-top">
+    <a class="navbar-brand" href="index.html">
       <img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="" />
       Transparent Government in Fact
     </a>
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item dropdown">
