--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
-		<a class="navbar-brand" href="#">
+	<nav id="navbar" class="container navbar navbar-expand-lg navbar-light bg-light border sticky-top">
+		<a class="navbar-brand" href="index.html">
 			<img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="" />
-			Transparent Government in Fact
+			TGIF
 		</a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -25,7 +25,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 
 				<li class="nav-item dropdown">
@@ -74,149 +74,172 @@
 		</div>
 	</header>
 	<!--Table container-->
-	<div>
-		<h2>Attendance</h2>
-		<p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
-			Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases,
-			debates continue even if a majority is not present.</p>
 
-		<p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or
-			"no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a
-			roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the
-			case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the
-			tiebreaking vote.</p>
+	<div class="container">
 
-		<h2>Senate at a glance</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Party</th>
-					<th>Number of Reps</th>
-					<th>% Voted with Prty</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Republican</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>Democrat</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>Independent</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="row">
 
-		<h2>Least Engaged (Bottom 10% Attendance)</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Number of Missed Votes</th>
-					<th>% Missed</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-			</tbody>
-		</table>
+			<div class="col content">
+				<h2>Attendance</h2>
+				<p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
+					Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most
+					cases,
+					debates continue even if a majority is not present.</p>
 
-		<h2>Most Engaged (Top 10% Attendance)</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Number of Missed Votes</th>
-					<th>% Missed</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-			</tbody>
-		</table>
+				<p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye"
+					or
+					"no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a
+					roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In
+					the
+					case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the
+					tiebreaking vote.</p>
+			</div>
+			<div class="col content">
+				<h2>Senate at a glance</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Party</th>
+							<th>Number of Reps</th>
+							<th>% Voted with Prty</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Republican</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>Democrat</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>Independent</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 
-	</div>
+		</div>
+		<div class="row">
 
-	<script src="main.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+			<div class="col content">
+				<h2>Least Engaged (Bottom 10% Attendance)</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Number of Missed Votes</th>
+							<th>% Missed</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="col content">
+				<h2>Most Engaged (Top 10% Attendance)</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Number of Missed Votes</th>
+							<th>% Missed</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+		</div>
+
+		<div>
+
+
+
+
+		</div>
+
+		<script src="main.js"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+			crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"></script>
 </body>
 
 </html>
