--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-	<nav id="navbar" class="container navbar navbar-expand-md navbar-light bg-light border sticky-top">
-		<a class="navbar-brand" href="#">
+	<nav id="navbar" class="container navbar navbar-expand-lg navbar-light bg-light border sticky-top">
+		<a class="navbar-brand" href="index.html">
 			<img src="Images/iconHouse2.png" width="30" height="30" class="d-inline-block align-top" alt="" />
-			Transparent Government in Fact
+			TGIF
 		</a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -25,7 +25,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 
 				<li class="nav-item dropdown">
@@ -74,143 +74,158 @@
 		</div>
 	</header>
 	<!--Table container-->
-	<div>
-		<h2>Party Loyalty</h2>
-		<p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend
-			to be the most faithful in voting for their party's nominee for office and legislation that backs their party's
-			agenda. </p>
+	<div class="container">
+		<div class="row">
 
-		<h2>Senate at a glance</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Party</th>
-					<th>Number of Reps</th>
-					<th>% Voted with Prty</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Republican</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>Democrat</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>Independent</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-			</tbody>
-		</table>
+			<div class="col content">
+				<h2>Party Loyalty</h2>
+				<p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively,
+					tend
+					to be the most faithful in voting for their party's nominee for office and legislation that backs their
+					party's
+					agenda. </p>
+			</div>
+			<div class="col content">
+				<h2>Senate at a glance</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Party</th>
+							<th>Number of Reps</th>
+							<th>% Voted with Prty</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Republican</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>Democrat</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>Independent</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 
-		<h2>Least Loyal (Bottom 10% of Party)</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Number Party Votes</th>
-					<th>% Party Votes</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-			</tbody>
-		</table>
+		</div>
+		<div class="row">
 
-		<h2>Most Loyal (Top 10% of Party)</h2>
-		<table>
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Number Party Votes</th>
-					<th>% Party Votes</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-				<tr>
-					<td>--</td>
-					<td>--</td>
-					<td>--</td>
-				</tr>
-			</tbody>
-		</table>
+			<div class="col content">
+				<h2>Least Loyal (Bottom 10% of Party)</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Number Party Votes</th>
+							<th>% Party Votes</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="col content">
+				<h2>Most Loyal (Top 10% of Party)</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Number Party Votes</th>
+							<th>% Party Votes</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+						<tr>
+							<td>--</td>
+							<td>--</td>
+							<td>--</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+		</div>
 
 	</div>
 
 	<script src="main.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
