starting to form tables

--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -140,7 +140,7 @@
                 <th>% Voted with Prty</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="glance">
               <tr>
                 <td>Republican</td>
                 <td>--</td>
@@ -171,37 +171,8 @@
                 <th>% Party Votes</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
+            <tbody id="leastLoyal">
+              
             </tbody>
           </table>
         </div>
@@ -215,42 +186,8 @@
                 <th>% Party Votes</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
+            <tbody id="mostLoyal">
+              
             </tbody>
           </table>
         </div>
