--- a/house-attendance.html
+++ b/house-attendance.html
@@ -95,7 +95,7 @@
 			</div>
 			<div class="col content">
 				<h2>Senate at a glance</h2>
-				<table>
+				<table class="table table-hover">
 					<thead>
 						<tr>
 							<th>Party</th>
@@ -103,22 +103,8 @@
 							<th>% Voted with Prty</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td>Republican</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>Democrat</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>Independent</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
+					<tbody  id="glance">
+					
 					</tbody>
 				</table>
 			</div>
@@ -128,7 +114,7 @@
 
 			<div class="col content">
 				<h2>Least Engaged (Bottom 10% Attendance)</h2>
-				<table>
+				<table class="table table-stripped table-hover">
 					<thead>
 						<tr>
 							<th>Name</th>
@@ -136,43 +122,14 @@
 							<th>% Missed</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
+					<tbody id="least">
+
 					</tbody>
 				</table>
 			</div>
 			<div class="col content">
 				<h2>Most Engaged (Top 10% Attendance)</h2>
-				<table>
+				<table class="table table-stripped table-hover">
 					<thead>
 						<tr>
 							<th>Name</th>
@@ -180,42 +137,8 @@
 							<th>% Missed</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
+					<tbody id="most">
+
 					</tbody>
 				</table>
 			</div>
