--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -132,7 +132,7 @@
         </div>
         <div class="col content">
           <h2>Senate at a glance</h2>
-          <table>
+          <table class="table table-hover">
             <thead>
               <tr>
                 <th>Party</th>
@@ -141,21 +141,7 @@
               </tr>
             </thead>
             <tbody id="glance">
-              <tr>
-                <td>Republican</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>Democrat</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-              <tr>
-                <td>Independent</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
+
             </tbody>
           </table>
         </div>
@@ -163,7 +149,7 @@
       <div class="row">
         <div class="col content">
           <h2>Least Loyal (Bottom 10% of Party)</h2>
-          <table>
+          <table class="table table-stripped table-hover">
             <thead>
               <tr>
                 <th>Name</th>
@@ -171,14 +157,14 @@
                 <th>% Party Votes</th>
               </tr>
             </thead>
-            <tbody id="leastLoyal">
+            <tbody id="least">
               
             </tbody>
           </table>
         </div>
         <div class="col content">
           <h2>Most Loyal (Top 10% of Party)</h2>
-          <table>
+          <table class="table table-stripped table-hover">
             <thead>
               <tr>
                 <th>Name</th>
@@ -186,7 +172,7 @@
                 <th>% Party Votes</th>
               </tr>
             </thead>
-            <tbody id="mostLoyal">
+            <tbody id="most">
               
             </tbody>
           </table>
