--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -87,7 +87,7 @@
 			</div>
 			<div class="col content">
 				<h2>Senate at a glance</h2>
-				<table>
+				<table class="table table-hover">
 					<thead>
 						<tr>
 							<th>Party</th>
@@ -95,22 +95,8 @@
 							<th>% Voted with Prty</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td>Republican</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>Democrat</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>Independent</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
+					<tbody id="glance">
+
 					</tbody>
 				</table>
 			</div>
@@ -120,7 +106,7 @@
 
 			<div class="col content">
 				<h2>Least Loyal (Bottom 10% of Party)</h2>
-				<table>
+				<table class="table table-stripped table-hover">
 					<thead>
 						<tr>
 							<th>Name</th>
@@ -128,43 +114,14 @@
 							<th>% Party Votes</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
+					<tbody id="least">
+
 					</tbody>
 				</table>
 			</div>
 			<div class="col content">
 				<h2>Most Loyal (Top 10% of Party)</h2>
-				<table>
+				<table class="table table-stripped table-hover">
 					<thead>
 						<tr>
 							<th>Name</th>
@@ -172,42 +129,8 @@
 							<th>% Party Votes</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
-						<tr>
-							<td>--</td>
-							<td>--</td>
-							<td>--</td>
-						</tr>
+					<tbody id="most">
+
 					</tbody>
 				</table>
 			</div>
